--- a/index.html
+++ b/index.html
@@ -42,5 +42,7 @@
         </footer>
       </main>
     </div>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js"></script>
   </body>
 </html>
