--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
         <main>
           <section class="section section--error">
             <div class="wrapper">
-              <article>
-                <header>
-                    <!-- Titre de l'article -->
-                  <h1>Bad Road</h1>
+                <div id="block-text">
+                  <h1>Oops, Bad Road</h1>
                   <h2>To valiant truck nothing impossible</h2>
-                </header>
-                  <!-- Texte de l'article -->
-              </article>
+                </div>
+                <div id="block-animation">
+                </div>
             </div>
         </section>
         <footer>
@@ -42,7 +40,7 @@
         </footer>
       </main>
     </div>
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js"></script>
   </body>
 </html>
