> Add Button "back"

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <div id="block-text">
                   <h1>Oops, Bad Road</h1>
                   <h2>To valiant truck nothing impossible</h2>
+                  <button class="bt-CTK" type="button">Go back!</button>
                 </div>
                 <div id="block-animation">
                 </div>
