> First illustration "road-a.svg"

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                   <button class="bt-CTK" type="button">Go back!</button>
                 </div>
                 <div id="block-animation">
+                  <img src="img/Road-a.svg" alt="First illustration" height="42" width="42">
                 </div>
             </div>
         </section>
