--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                   <button class="bt-CTK" type="button">Go back!</button>
                 </div>
                 <div id="block-animation">
+                  <div class="animation">
                   <img src="img/Road-a.svg" alt="First illustration" height="42" width="42">
+                </div>
                 </div>
             </div>
         </section>
