--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div id="block-animation">
                   <div class="animation">
-                  <img src="img/Road-a.svg" alt="First illustration" height="42" width="42">
+                  <img src="img/Road-a.svg" alt="First illustration">
                 </div>
                 </div>
             </div>
